<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aplikasi Absensi dan Penilaian</string>
    <string name="action_settings">Settings</string>
    <string name="daftarsiswa">Daftar Siswa</string>
    <string name="absensi">Absensi</string>
    <string name="penilaian">Penilaian</string>
    <string name="help">Bantuan</string>
    <string name="tentangkami">Tentang Kami</string>
    <string name="kdSiswa">Kode Siswa</string>
    <string name="namaSiswa">Nama Siswa</string>
    <string name="jkelamin">Jenis Kelamin</string>
    <string name="laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="smpn">Simpan</string>
    <string name="edit">Edit</string>
    <string name="hps">Hapus</string>
    <string name="cari">Cari</string>
    <string name="crkdornm">Cari kode atau nama siswa</string>
    <color name="warnaabu">#888888</color>
    <string name="khdrn">Kehadiran</string>
    <string name="nilaitugas">Nilai Tugas</string>
    <string name="nilaiuts">Nilai UTS</string>
    <string name="nilaiuas">Nilai UAS</string>
    <string name="lhtnlai">Lihat Nilai</string>
    <string name="bantuan1">Untuk menggunakan aplikasi ini anda diwajibkan mengikuti ketentuan yang ada di bawah ini :</string>
    <string name="bantuan2">Isilah daftar siswa sesuai dengan yang dibutuhkan. Lakukan penyimpanan data siswa pada form yang telah disediakan. Untuk melakukan edit pada data siswa, sentuh dan tahan pada data siswa yang akan diedit dan lakukan hal yang sama untuk penghapusan data siswa. Apabila daftar siswa tidak diisi sama sekali, maka tidak dapat dilakukan proses absensi dan penilaian!</string>
    <string name="bantuan3">Pada proses absensi akan dilakukan pengabsenan seluruh daftar siswa yang ada. Beri keterangan saat pengabsenan seperti hadir atau sakit atau izin atau alpha kemudian simpan. Apabila proses absensi belum selesai dalam artian masih ada siswa yang belum melakukan absensi, maka data dari proses absensi siswa yang sebelumnya telah disimpan akan dibatalkan atau terhapus. Proses absensi dilakukan hingga mencapai 16 pertemuan, jika sudah mencapai 16 pertemuan maka tidak akan bisa melakukan lagi absensi. Apabila data siswa yang bersangkutan dihapus pada form daftar siswa, maka data absensi siswa yang bersangkutan pun akan terhapus.</string>
    <string name="bantuan4">Untuk melakukan input atau edit nilai terhadap siswa, cari data siswa berdasarkan kode siswa atau nama siswa tersebut. Persentase kehadiran akan ditampilkan secara otomatis berdasarkan jumlah kehadiran dari 16 pertemuan. Nilai tugas, uts dan uas pun akan ditampilkan secara otomatis apabila sebelumnya telah dilakukan input nilai. Untuk melihat keseluruhan nilai siswa tekan tombol Lihat Nilai pada form Penilaian. Pada form Lihat Nilai, terdapat nilai akhir dimana merupakan hasil jumlah dari nilai yang diinput. Untuk persentase kehadiran berpengaruh 10 persen, nilai tugas berpengaruh 15 persen, nilai Ujian Tengah Semester berpengaruh 25 persen, nilai Ujian Akhir Semester berpengaruh 50 persen. Apabila nilai belum diinputkan sebelumnya maka form Lihat Nilai akan menampilkan nilai null dalam artian tidak ada nilai.</string>
    <string name="isitentang">Aplikasi Absensi dan Penilaian merupakan tugas besar Praktikum Rekayasa Perangkat Lunak Lanjut. AAP dibuat secara berkelompok yang terdiri dari dua orang yaitu Fikri Anggara(1127050058, fikrianggara@programmer.net) dan Mia Amalia(1127050095, amaliamia22@gmail.com).</string>

</resources>
