<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aplikasi.absensi.penilaian.MainActivity" >
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_centerHorizontal="true"
		    android:text="@string/help"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/textView1"
		    android:layout_marginTop="25dp"
		    android:text="@string/bantuan1"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentRight="true"
		    android:layout_below="@+id/textView2"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="20dp"
		    android:gravity="left"
		    android:text="@string/bantuan2"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/textView3"
		    android:layout_marginTop="10dp"
		    android:text="@string/bantuan3"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<TextView
		    android:id="@+id/textView5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/textView4"
		    android:layout_marginTop="10dp"
		    android:text="@string/bantuan4"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
		
	</RelativeLayout>
</ScrollView>
