<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aplikasi.absensi.penilaian.MainActivity" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	
	    <TextView
        	android:id="@+id/textView1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
        	android:layout_centerHorizontal="true"
        	android:text="@string/penilaian"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <Button
	        android:id="@+id/Button2"
	        android:layout_width="140dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/editText4"
	        android:layout_marginTop="325dp"
	        android:text="@string/smpn" />
	
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView2"
	        android:layout_marginTop="15dp"
	        android:text="@string/namaSiswa"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
        	android:id="@+id/textView6"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
        	android:layout_below="@+id/textView4"
        	android:layout_marginTop="15dp"
        	android:text="@string/khdrn"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
    	    android:id="@+id/textView7"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignBaseline="@+id/textView6"
    	    android:layout_alignLeft="@id/textView5"
    	    android:layout_alignParentRight="true"
    	    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/textView2"
	        android:layout_alignLeft="@id/textView5"
	        android:layout_alignParentRight="true"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/editText1"
	        android:layout_marginTop="15dp"
	        android:text="@string/kdSiswa"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/editText3"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textView9"
	        android:layout_alignParentRight="true"
	        android:ems="10"
	        android:inputType="number|numberSigned|numberDecimal" />
	
	    <TextView
	        android:id="@+id/textView10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/textView9"
	        android:layout_marginTop="15dp"
	        android:text="@string/nilaiuas"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
    	<EditText
    	    android:id="@+id/editText4"
    	    android:layout_width="200dp"
    	    android:layout_height="wrap_content"
    	    android:layout_alignBaseline="@id/textView10"
    	    android:layout_alignParentRight="true"
    	    android:ems="10"
    	    android:inputType="number|numberSigned|numberDecimal" />

    	<EditText
    	    android:id="@+id/editText1"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentRight="true"
    	    android:layout_below="@+id/textView1"
    	    android:layout_centerHorizontal="true"
    	    android:layout_marginTop="15dp"
    	    android:ems="10"
    	    android:hint="@string/crkdornm"
    	    android:inputType="textPersonName" ><requestFocus/>
    	    </EditText>

    	<TextView
    	    android:id="@+id/textView5"
    	    android:layout_width="200dp"
    	    android:layout_height="wrap_content"
    	    android:layout_alignBaseline="@+id/textView4"
    	    android:layout_alignParentRight="true"
    	    android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
    	    android:id="@+id/textView9"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:layout_below="@+id/textView8"
    	    android:layout_marginTop="15dp"
    	    android:text="@string/nilaiuts"
    	    android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/editText2"
    	    android:layout_width="200dp"
    	    android:layout_height="wrap_content"
    	    android:layout_alignBaseline="@id/textView8"
    	    android:layout_alignParentRight="true"
    	    android:ems="10"
    	    android:inputType="number|numberSigned|numberDecimal" />

    	<TextView
    	    android:id="@+id/textView8"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:layout_below="@+id/textView6"
    	    android:layout_marginTop="30dp"
    	    android:text="@string/nilaitugas"
    	    android:textAppearance="?android:attr/textAppearanceMedium" />

    	<Button
    	    android:id="@+id/Button3"
    	    android:layout_width="140dp"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:layout_below="@+id/editText4"
    	    android:layout_marginTop="325dp"
    	    android:text="@string/lhtnlai" />
	
	</RelativeLayout>
</ScrollView>